# Drone-Maba-

./: .gitignore  README.md
auto/src/autonomous/: CMakeLists.txt  package.xml
auto/src/autonomous/src/: autonomous.cpp  autonomous.cpp.save
auto/src/command/: package.xml
src/command/: CMakeLists.txt
src/command/include/command/: config_manager.hpp
src/command/launch/: command_n_keyboard_launch.py
src/command/src/: command.cpp  config_manager.cpp
teleop/: takeoff.sh
teleop/config/: command_param.yaml
teleop/src/command/: CMakeLists.txt
teleop/src/command/include/command/: config_manager.hpp  drone_controller.hpp
teleop/src/command/launch/: command_n_joy.launch.py
teleop/src/command/src/: command.cpp  config_manager.cpp  drone_controller.cpp
teleop/src/curses_keyboard_joy/: package.xml  setup.cfg  setup.py
teleop/src/curses_keyboard_joy/config/: key_mappings.yaml
teleop/src/curses_keyboard_joy/curses_keyboard_joy/: joy_node.py
teleop/src/curses_keyboard_joy/launch/: curses_keyboard_joy.launch.py
teleop/src/keyboard_joy/: package.xml  setup.py
teleop/src/keyboard_joy/keyboard_joy/: joy_node.py
teleop/src/keyboard_joy/launch/: keyboard_joy.launch.py
teleop/src/keyboard_joy/scripts/: joy_node
